--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -10,7 +10,11 @@
     "start:server": "json-server-auth --watch db.json --port 3001"
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.14",
+    "@types/jquery.validation": "^1.16.7",
     "autoprefixer": "^10.4.7",
+    "jquery": "^3.6.0",
+    "jquery-validation": "^1.19.5",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.6",
     "typescript": "^4.6.4",
